theme/default/css/dynamic.css
@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600');

*, body {
	font-family: 'Open Sans', sans-serif;
	-webkit-font-smoothing: antialiased;
    text-rendering: optimizeLegibility;
}

body {
	padding: 0;
	margin: 0;
	height: auto !important;
}

.edusharing_rendering_cursor_pointer {
	cursor: pointer;
}

.edusharing_rendering_wrapper {
	background-color: #666;
	padding: 0;
	margin: 0;
    font-size: 100%;
    min-height: 100%;
}

#edusharing_rendering_metadata {
	background-color: #f6f6f6;
	padding-bottom: 30px;
}
img.edusharing_rendering_metadata_header_icon {
	height: 51px;
	width: 68px;
	margin: 10px -10px -10px 20px;
	cursor: pointer;
	float: left;
}

h1.edusharing_rendering_metadata_header_title {
	font-size: 130%;
    font-weight: 400;
    margin-top: 1.8rem;
    margin-left: 20px;
    float: left;
    max-width: 100%;
}

.edusharing_rendering_metadata_body {
	clear: both;
	display: flex;
	flex-wrap: nowrap;
}

.edusharing_rendering_metadata_body h2 {
	 background-color: #fff;
    border-bottom: 1px solid #000;
    padding: 15px 15px;
    font-size: 150%;
    height: 50px;
    margin-top: 30px;
    font-weight: 600;
    text-transform: uppercase;
}

.edusharing_rendering_metadata_body h3 {
	font-size: 100%;
	font-weight: 600;
	font-style: italic;
	margin-left: 16px;
	margin-bottom: -14px;
}

.edusharing_rendering_metadata_body_column {
	flex: 1;
	padding: 0 20px;
}

.edusharing_rendering_metadata_body_label {
	display: block;
	font-style: italic;
	color: #6f6f6f;
	margin: 25px 0 0 15px;
}

.edusharing_rendering_metadata_body_value {
	display: inline-block;
	margin: 7px 0 0 15px;
}

.edusharing_rendering_metadata_body_value.block {
	display: block;	
}

.edusharing_rendering_metadata_body_value.rschip {
	background-color: #DDDDDD;
	border-radius: 999px;
	padding: 3px 10px;
	margin-right: -10px;
}

.edusharing_rendering_metadata_body_value.rschip.people {
	padding-left: 30px;
	background-image: url('data:image/svg+xml;utf8,%3Csvg%20width%3D%2213px%22%20height%3D%2213px%22%20viewBox%3D%220%200%2013%2013%22%20version%3D%221.1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%3E%3Ctitle%3EShape%3C%2Ftitle%3E%3Cdesc%3ECreated%20with%20Sketch.%3C%2Fdesc%3E%3Cdefs%3E%3C%2Fdefs%3E%3Cg%20id%3D%22Symbols%22%20stroke%3D%22none%22%20stroke-width%3D%221%22%20fill%3D%22none%22%20fill-rule%3D%22evenodd%22%3E%3Cg%20id%3D%22Chip-User%22%20transform%3D%22translate(-10.000000%2C%20-9.000000)%22%20fill%3D%22%238B8B8B%22%3E%3Cg%20id%3D%22Chip%22%3E%20%3Cpath%20d%3D%22M16.5%2C15.5%20C18.295625%2C15.5%2019.75%2C14.045625%2019.75%2C12.25%20C19.75%2C10.454375%2018.295625%2C9%2016.5%2C9%20C14.704375%2C9%2013.25%2C10.454375%2013.25%2C12.25%20C13.25%2C14.045625%2014.704375%2C15.5%2016.5%2C15.5%20L16.5%2C15.5%20Z%20M16.5%2C17.125%20C14.330625%2C17.125%2010%2C18.21375%2010%2C20.375%20L10%2C22%20L23%2C22%20L23%2C20.375%20C23%2C18.21375%2018.669375%2C17.125%2016.5%2C17.125%20L16.5%2C17.125%20Z%22%20id%3D%22Shape%22%3E%3C%2Fpath%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E');
	background-repeat: no-repeat;
	background-position: 9px center;
}

.edusharing_rendering_metadata_body_value.rschip.group {
	padding-left: 30px;
	background-image: url('data:image/svg+xml;utf8,%3Csvg%20width%3D%2215px%22%20height%3D%2210px%22%20viewBox%3D%220%200%2015%2010%22%20version%3D%221.1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%3E%20%20%20%20%3Ctitle%3EShape%3C%2Ftitle%3E%3Cdesc%3ECreated%20with%20Sketch.%3C%2Fdesc%3E%3Cdefs%3E%3C%2Fdefs%3E%3Cg%20id%3D%22Symbols%22%20stroke%3D%22none%22%20stroke-width%3D%221%22%20fill%3D%22none%22%20fill-rule%3D%22evenodd%22%3E%3Cg%20id%3D%22Chip-Group%22%20transform%3D%22translate(-10.000000%2C%20-10.000000)%22%20fill%3D%22%238B8B8B%22%3E%3Cg%20id%3D%22Chip-Copy%22%3E%3Cpath%20d%3D%22M20.2272727%2C14.0909091%20C21.3590909%2C14.0909091%2022.2659091%2C13.1772727%2022.2659091%2C12.0454545%20C22.2659091%2C10.9136364%2021.3590909%2C10%2020.2272727%2C10%20C19.0954545%2C10%2018.1818182%2C10.9136364%2018.1818182%2C12.0454545%20C18.1818182%2C13.1772727%2019.0954545%2C14.0909091%2020.2272727%2C14.0909091%20L20.2272727%2C14.0909091%20Z%20M14.7727273%2C14.0909091%20C15.9045455%2C14.0909091%2016.8113636%2C13.1772727%2016.8113636%2C12.0454545%20C16.8113636%2C10.9136364%2015.9045455%2C10%2014.7727273%2C10%20C13.6409091%2C10%2012.7272727%2C10.9136364%2012.7272727%2C12.0454545%20C12.7272727%2C13.1772727%2013.6409091%2C14.0909091%2014.7727273%2014.0909091%20L14.7727273%2C14.0909091%20Z%20M14.7727273%2C15.4545455%20C13.1840909%2C15.4545455%2010%2C16.2522727%2010%2C17.8409091%20L10%2C19.5454545%20L19.5454545%2C19.5454545%20L19.5454545%2C17.8409091%20C19.5454545%2C16.2522727%2016.3613636%2C15.4545455%2014.7727273%2C15.4545455%20L14.7727273%2C15.4545455%20Z%20M20.2272727%2015.4545455%20C20.0295455%2C15.4545455%2019.8045455%2C15.4681818%2019.5659091%2C15.4886364%20C20.3568182%2C16.0613636%2020.9090909%2C16.8318182%2020.9090909%2C17.8409091%20L20.9090909%2C19.5454545%20L25%2C19.5454545%20L25%2C17.8409091%20C25%2C16.2522727%2021.8159091%2C15.4545455%2020.2272727%2C15.4545455%20L20.2272727%2C15.4545455%20Z%22%20id%3D%22Shape%22%3E%3C%2Fpath%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E');
	background-repeat: no-repeat;
	background-position: 9px center;
}

.edusharing_rendering_content_wrapper {
	text-align: center;
	margin: 30px 20px;
}

.edusharing_rendering_content_wrapper h3, .edusharing_rendering_content_wrapper h4 {
	color: #fff;		
}

.edusharing_rendering_content_wrapper h3 {
	font-size: 120%;
	font-weight: 600;
	color: #ccc;
}

.edusharing_rendering_content_wrapper h4 {
	font-size: 140%;
}

h1.edusharing_rendering_content_title {
	font-size: 120%;
	font-weight: 600;
	color: #fff;
	text-align: center;
}

.edusharing_rendering_content {
	text-align: center;
}

a.edusharing_rendering_content {
	border-radius: 3px;
	padding: 8px 16px;
	text-decoration: none;
	color: #fff;
	background-color: #4F7A98;
	display: inline-block;
	margin-top: 20px;
	text-transform: uppercase;
	font-weight: 600;
}

.edusharing_rendering_content, video, audio {
	-webkit-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.3);
	-moz-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.3);
	box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.3);
	max-width: 100%;
	max-height: calc(100vh - 170px);
}

img.edusharing_rendering_content_preview {
	display: block;
	margin: 20px auto;
	max-width: 400px;
	max-height: 400px;
}

.videoWrapperOuter {
	margin: 0 auto;
}

.es_progressbar_container {
	border: 5px solid #555 !important;
	width: 100%;
	text-align: left !important;
	box-sizing: initial;
	margin: 0 auto;
}

.es_progressbar_progress {
	border-right: 1px solid #fff;
}

.renderservice_message {
	color: #fff;
	font-size: 120%;
}

#edusharing_scrolltotop {
	position: fixed;
	bottom: 20px;
	right: 30px;
	display: none;
	width: 45px;
	height: 35px;
	background-image: url('data:image/svg+xml;utf8,%3Csvg%20version%3D%221.1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%20x%3D%220px%22%20y%3D%220px%22%20viewBox%3D%220%200%201000%201000%22%20enable-background%3D%22new%200%200%201000%201000%22%20xml%3Aspace%3D%22preserve%22%3E%3Cmetadata%3E%20Svg%20Vector%20Icons%20%3A%20http%3A%2F%2Fwww.onlinewebfonts.com%2Ficon%20%3C%2Fmetadata%3E%3Cg%20fill%3D%22%23ffffff%22%3E%3Cpath%20d%3D%22M500%2C353L500%2C353l424.7%2C424.6l65.3-65.3L532.7%2C255L500%2C222.4L467.3%2C255L10%2C712.3l65.3%2C65.3L500%2C353z%22%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E');
	background-repeat: no-repeat;
	background-position: center center;
	background-size: 20px 20px;
	background-color: #4F7A98;
	cursor: pointer;
	border-radius: 3px;
	color: #fff;
}


@media (max-width: 800px) {
	.edusharing_rendering_metadata_body {
		display: block;
	}
	
	.edusharing_rendering_metadata_body_column {
		display: block;
		padding: 0;
	}
	
	.edusharing_rendering_content_wrapper h3 {
		font-size: 90%;
		margin: 0.5rem 0rem;
	}
	
	.edusharing_rendering_content_wrapper h4 {
		font-size: 110%;
		margin: 0.5rem 0rem;
	}
	
	h1.edusharing_rendering_metadata_header_title {
		margin: 1.8rem 0 2rem 20px;
	}
	
	img.edusharing_rendering_content_preview {
		margin: 10px auto;
	}

}

